--- a/redo/loginfail.html
+++ b/redo/loginfail.html
@@ -9,10 +9,10 @@
       <h1>MIDSPACE</h1>
     </div>
     <form class="login" method="post" action="login.php">
-      <input type="text" placeholder="Username" name="username"/>
+      <input class="loginput" type="text" placeholder="Username" name="username"/>
       <br/>
-      <input type="password" placeholder="Password" name="password">
-      <input type="submit" value="Login" />
+      <input class="loginput" type="password" placeholder="Password" name="password">
+      <input class="loginsub" type="submit" value="Login" />
     </form>
     <br/>
     <div class="frontpagelink">
