--- a/redo/signup.html
+++ b/redo/signup.html
@@ -86,7 +86,7 @@
       </p>
       <label>
         Bio: <br />
-        <textarea class="textinput" onblur="return validateBIO();" placeholder="Bio goes here..."></textarea>
+        <textarea name = "bio" class="textinput" onblur="return validateBIO();" placeholder="Bio goes here..."></textarea>
       </label><br />
       <input class="signupsub" type="submit" value="Sign Up" onclick="return validate()"/>
       <input class="signupsub" type="reset" value="Clear Form" />
